# hobob

./: .gitignore  Cargo.toml  Cross.toml  README.md  flake.nix
.cache/: follow_uids.sh  get_uids.sh  uids.txt
.cargo/: config.toml
armv7-unknown-linux-gnueabihf/: Dockerfile  apt.list
assets/: db_init.sql  log4rs.yml
etc/aarch64-unknown-linux-gnu/: Dockerfile  apt.list
etc/armv7-unknown-linux-gnueabihf/: Dockerfile
hobob/: Cargo.toml
hobob/assets/: log4rs.yml
hobob/src/: bench.rs  chunk.rs  chunkir.lalrpop  data_schema.rs  db.rs  engine.rs  lib.rs  main.rs  vm.rs  www.rs
hobob/src/test_data/: chunk_001.expect.json
hobob/static/: index.js
hobob/templates/: failure.html  filter_options.html  index.html  user_cards.html
hobob_app/: Cargo.toml
hobob_app/src/: lib.rs  logic.rs  main.rs  resource.rs  startup.rs  ui.rs  widget.rs
hobob_app/src/logic/backend/: face.rs  mod.rs  parser.rs  timer.rs
hobob_app/src/logic/frontend/: display.rs  input.rs
hobob_bevy_widget/: Cargo.toml
hobob_bevy_widget/examples/: download-face.rs  scroll_list.rs
hobob_bevy_widget/src/: button.rs  lib.rs  scroll.rs
hobob_bevy_widget/tests/: add_plugin.rs
hobob_cache/: Cargo.toml
hobob_cache/src/: db.rs  engine.rs  lib.rs  main.rs  www.rs
hobob_cache/src/www/: index.rs  mod.rs
hobob_cache/static/: index.js
hobob_cache/templates/: index.html  user_cards.html
hobob_dbgconn/: Cargo.toml
hobob_dbgconn/src/: client.rs  lib.rs  main.rs  server.rs
monkey/: follow_op.js
script/: download-cn-font.sh
src/: data_schema.rs  db.rs  engine.rs  lib.rs  main.rs  www.rs
static/: index.js
templates/: index.html  user_cards.html
xtask/src/: main.rs
