[package]
name = "hobob"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tera = "1.12"
error-chain = "0.12"
rusqlite = { version = "0.25", features = ["chrono"] }
log = "0.4"
log4rs = "1"
lazy_static = "1.4"
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
serde_derive = "1"
serde = "1"
rand = "0.8"

bilibili-api-rs = { path = "../../bilibili-api-rs" }
