[package]
name = "hobob_app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["default", "jpeg"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
ron = "*"
serde = "1"
serde_json = "1"
chrono = "0.4"
futures-lite = "1.11"
reqwest = "0.11"
futures-util = "0.3"

# simple_logger = "1.11"

hobob_bevy_widget = { path = "../hobob_bevy_widget" }

bilibili-api-rs = { path = "../../bilibili-api-rs", features = ["plugin"] }
