[package]
name = "hobob_bevy_widget"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"

[dev-dependencies]
reqwest = { version = "0.11", features = ["stream"] }
futures-util = "0.3"

[dev-dependencies.tokio]
version = "1"
features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
]
