[package]
name = "hobob_cache"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tera = "1.12"
error-chain = "0.12"
rusqlite = "0.25"
log = "0.4"
env_logger = "*"
