[package]
name = "hobob_cache"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
tera = "1.12"
error-chain = "0.12"
rusqlite = { version = "0.25", features = ["chrono"] }
log = "0.4"
env_logger = "*"
lazy_static = "1.4"
chrono = "0.4"
serde_json = "1"

bilibili-api-rs = { path = "../../bilibili-api-rs" }
