[package]
name = "hobob_dbgconn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
tarpc = { version = "0.33.0", features = ["tokio1"] }
tokio = { version = "1.33.0", features = ["macros"] }
