[package]
name = "hobob_dbgconn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
duct = "0.13.6"
env_logger = "0.10.0"
futures = "0.3.29"
log = "0.4.20"
tarpc = { version = "0.33.0", features = ["full"] }
tokio = { version = "1.33.0", features = ["macros", "net", "rt-multi-thread"] }

